[package]
name = "map-interpolation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# nalgebra = "0.30.1"
csv = "1.1.6"
serde = { version = "1.0.136", features = ["derive"]}
opencv = { version = "0.63.0", features = ["calib3d"]}